--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
+imageio==2.2.0
 gym==0.9.7
 tensorflow==1.2.1
 tensorflow-gpu==1.7.0
 numpy==1.14.2
 keras==2.1.5
 Pillow==5.1.0
+git+git:github.com/Kojoley/atari-py/releases atari_py#egg=gym[atari]
